--- a/index.html
+++ b/index.html
@@ -99,13 +99,22 @@
       <div class="container">
         <h2 class="work-title">Чем мы занимаемся</h2>
         <ul class="work-list list">
-          <li class="work-item"><img src="./img/work1.jpg" alt="написание кода на техническом устройстве" width="370" height="294"></li>
-          <li class="work-item"><img src="./img/work2.jpg" alt="дизайн продукта" width="370" height="294"></li>
-          <li class="work-item"><img src="./img/work3.jpg" alt="выбор колористики" width="370" height="294"></li>
+          <li class="work-item">
+            <img src="./img/work1.jpg" alt="написание кода на техническом устройстве" width="370" height="294">
+            <p class="work-text">Десктопные приложения</p>
+          </li>
+          <li class="work-item">
+            <img src="./img/work2.jpg" alt="дизайн продукта" width="370" height="294">
+            <p class="work-text">Мобильные приложения</p>
+          </li>
+          <li class="work-item">
+            <img src="./img/work3.jpg" alt="выбор колористики" width="370" height="294">
+            <p class="work-text">Дизайнерские решения</p>
+          </li>
         </ul>
       </div>
      </section>
-    <!-- секция инфо о команде -->
+    <!-- секция наша команда -->
      <section class="comand section">
       <div class="container">
         <h2 class="comand-title">Наша команда</h2>
