--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
         <ul class="work-list list">
           <li class="work-item">
             <img src="./img/work1.jpg" alt="написание кода на техническом устройстве" width="370" height="294">
-            <p class="work-text">Десктопные приложения</p>
+            <p class="work-item-text">Десктопные приложения</p>
           </li>
           <li class="work-item">
             <img src="./img/work2.jpg" alt="дизайн продукта" width="370" height="294">
-            <p class="work-text">Мобильные приложения</p>
+            <p class="work-item-text">Мобильные приложения</p>
           </li>
           <li class="work-item">
             <img src="./img/work3.jpg" alt="выбор колористики" width="370" height="294">
-            <p class="work-text">Дизайнерские решения</p>
+            <p class="work-item-text">Дизайнерские решения</p>
           </li>
         </ul>
       </div>
