--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,10 @@
           <ul class="filter-container-list list">
               <li class="filter-container-item">
                   <a class="filter-container-link link" href="">
-                    <img src="./img/filter1.jpg" alt="Веб-сайт" width="370" height="294">
+                    <div class="filter-overlay">
+                      <img src="./img/filter1.jpg" alt="Веб-сайт" width="370" height="294">
+                      <p class="filter-overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                     <div class="filter-box">
                       <h2 class="filter-container-title">Технокряк</h2>
                       <p class="filter-container-after-title">Веб-сайт</p>
@@ -67,7 +70,10 @@
 
               <li class="filter-container-item">
                 <a class="filter-container-link link" href="">
-                  <img src="./img/filter2.jpg" alt=" постер с 2 людьми" width="370" height="294">
+                  <div class="filter-overlay">
+                    <img src="./img/filter2.jpg" alt=" постер с 2 людьми" width="370" height="294">
+                    <p class="filter-overlay-text"></p>
+                  </div>
                   <div class="filter-box">
                     <h2 class="filter-container-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
                     <p class="filter-container-after-title">Дизайн</p>
@@ -78,7 +84,10 @@
 
             <li class="filter-container-item"> 
                 <a class="filter-container-link link" href="">
-                  <img src="./img/filter3.jpg" alt="лого к ресторану" width="370" height="294">
+                  <div class="filter-overlay">
+                    <img src="./img/filter3.jpg" alt="лого к ресторану" width="370" height="294">
+                    <p class="filter-overlay-text"></p>
+                  </div>
                   <div class="filter-box">
                     <h2 class="filter-container-title">Рестора <span lang="en">Seafood</span></h2>
                     <p class="filter-container-after-title">Приложение</p>
@@ -89,7 +98,10 @@
 
             <li class="filter-container-item">
                 <a class="filter-container-link link" href="">
-                  <img src="./img/filter4.jpg" alt="наушники" width="370" height="294">
+                  <div class="filter-overlay">
+                    <img src="./img/filter4.jpg" alt="наушники" width="370" height="294">
+                    <p class="filter-overlay-text"></p>
+                  </div>
                   <div class="filter-box">
                     <h2 class="filter-container-title">Проект <span lang="en">Prime</span></h2>
                     <p class="filter-container-after-title">Маркетинг</p>
@@ -100,7 +112,10 @@
 
             <li class="filter-container-item">
                 <a class="filter-container-link link" href="">
-                  <img src="./img/filter5.jpg" alt="две коробки" width="370" height="294">
+                  <div class="filter-overlay">
+                    <img src="./img/filter5.jpg" alt="две коробки" width="370" height="294">
+                    <p class="filter-overlay-text"></p>
+                  </div>
                   <div class="filter-box">
                     <h2 class="filter-container-title">Проект <span lang="en">Boxes</span></h2>
                     <p class="filter-container-after-title">Приложение</p>
@@ -110,8 +125,11 @@
             </li>
 
             <li class="filter-container-item">
-                <a class="filter-container-link link" href="">
-                  <img src="./img/filter6.jpg" alt="комппютер с изображением Веб-сайта" width="370" height="294">
+                <a class="filter-container-link link" href="">                  
+                  <div class="filter-overlay">
+                    <img src="./img/filter6.jpg" alt="комппютер с изображением Веб-сайта" width="370" height="294">
+                    <p class="filter-overlay-text"></p>
+                  </div>
                   <div class="filter-box">
                     <h2  class="filter-container-title" lang="en">Inspiration has no Borders</h2>
                     <p class="filter-container-after-title">Веб-сайт</p>
@@ -121,8 +139,11 @@
             </li>
 
             <li class="filter-container-item">
-                <a class="filter-container-link link" href="">
-                  <img src="./img/filter7.jpg" alt="развернутая книга" width="370" height="294">
+                <a class="filter-container-link link" href="">                 
+                  <div class="filter-overlay">
+                    <img src="./img/filter7.jpg" alt="развернутая книга" width="370" height="294">
+                    <p class="filter-overlay-text"></p>
+                  </div>
                   <div class="filter-box">
                     <h2 class="filter-container-title">Издание <span lang="en">Limited Edition</span></h2>
                     <p class="filter-container-after-title">Дизайн</p>
@@ -132,8 +153,11 @@
             </li>
 
             <li class="filter-container-item">
-                <a class="filter-container-link link" href="">
-                  <img src="./img/filter8.jpg" alt="эмблоема Проекта LAB" width="370" height="294">
+                <a class="filter-container-link link" href="">             
+                  <div class="filter-overlay">
+                    <img src="./img/filter8.jpg" alt="эмблоема Проекта LAB" width="370" height="294">
+                    <p class="filter-overlay-text"></p>
+                  </div>
                   <div class="filter-box">
                     <h2 class="filter-container-title">Проект LAB</h2>
                     <p class="filter-container-after-title">Маркетинг</p>
@@ -144,7 +168,10 @@
             
             <li class="filter-container-item">
                 <a class="filter-container-link link" href="">
-                  <img src="./img/filter9.jpg" alt="работа за ноутбуком" width="370" height="294">
+                  <div class="filter-overlay">
+                    <img src="./img/filter9.jpg" alt="работа за ноутбуком" width="370" height="294">
+                    <p class="filter-overlay-text"></p>
+                  </div>
                   <div class="filter-box">
                     <h2 class="filter-container-title" lang="en">Growing Business</h2>
                     <p class="filter-container-after-title">Приложение</p>
