--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
       <div class="hero-container container ">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button class="hero-btn" type="button">Заказать услугу</button>
+        <div class="backdrop">
+          <div class="modal">
+            
+          </div>
+        </div>
       </div>
      </section>
     <!-- секция инфо о работе -->
@@ -326,5 +331,6 @@
     </div> 
     </div>
   </footer>
+  <script src="./js/modal.js"></script>
 </body>
 </html>
