--- a/index.html
+++ b/index.html
@@ -43,10 +43,14 @@
      <section class="hero">
       <div class="hero-container container ">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-btn" type="button">Заказать услугу</button>
-        <div class="backdrop">
+        <button class="hero-btn" type="button" data-modal-open>Заказать услугу</button>
+        <div class="backdrop is-hidden" data-modal>
           <div class="modal">
-            
+            <button class="modal-btn" data-modal-close>
+              <svg class="modal-icon" width="11" height="11">
+                <use href="./img/icons.svg#vector"></use>
+              </svg>
+            </button>                        
           </div>
         </div>
       </div>
